--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style_form.css">
 </head>
 <body>
     
+    <form action="">
+        <div><label for="username">Username:</label><input id="username" type="text"></div>
+        <div><label for="pass">Password:</label><input id="pass" type="text"></div>
+        <button>Register</button>        
+    </form>
 </body>
 </html>
